# peripheral-mcp

./: .env.example  .gitignore  DEPLOYMENT.md  DEPLOYMENT_BOTTLENECK.md  Dockerfile  README.md  SECURE_DEPLOYMENT.md  TEST_AND_CONFIGURE.md  deploy-horizon.sh  deploy-railway.sh  deploy.sh  pyproject.toml  railway.json  render.yaml  requirements.txt  supabase_rls_policies.sql
src/api/: main.py
src/flows/: briefing.py
src/mcp/: cloud_server.py  horizon_server.py  server.py
